2005-08-31  Martin Hunt  <hunt@redhat.com>

	* list.c (_stp_copy_argv_from_user): ifdef this function
	NEED_STRING_VALS.

2005-08-30  Roland McGrath  <roland@redhat.com>

	* loc2c-runtime.h (fetch_register, store_register): Rewritten to pass
	REGS to dwarf_register_<N> as a macro argument.
	[__i386__, __x86_64__]: Update dwarf_register_* macros.
	[__i386__] (dwarf_register_4): Define special case for stack pointer.

2005-08-29  Martin Hunt  <hunt@redhat.com>

	* list.c (_stp_copy_argv_from_user): Move to here.
	* copy.c (_stp_copy_argv_from_user): Delete.
	* runtime.h: Always include copy.h.

2005-08-25  Roland McGrath  <roland@redhat.com>

	* loc2c-runtime.h (deref_string): Rewritten using deref.

2005-08-24  Roland McGrath  <roland@redhat.com>

	* loc2c-runtime.h (deref_string): New macro.

2005-08-24  Martin Hunt  <hunt@redhat.com>

	* io.c (_stp_vlog): Send warnings and errors to STP_OOB_DATA.

2005-08-23  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Add a prototype for _stp_dbug().

2005-08-22  Martin Hunt  <hunt@redhat.com>

	* runtime.h (kbug): New dbug macros that calls printk.

2005-08-21  Frank Ch. Eigler  <fche@redhat.com>

	* arith.c (*): Adapt to last_error context variable.

2005-08-19  Frank Ch. Eigler  <fche@elastic.org>

	* arith.c (_stp_random_pm): New function.

2005-08-19  Martin Hunt  <hunt@redhat.com>

	* print.c: Change ifdefs to STP_RELAYFS.
	* runtime.h: Ditto.
	* io.c (_stp_vlog): Call _stp_write instead of
	_stp_ctrl_send.
	* Makefile: Don't build stp-control.
	* README.doc: Update.
	* TODO: Update.

2005-08-12  Graydon Hoare  <graydon@redhat.com>

	* map-values.c (_stp_map_entry_exists): New function.
	* map.h (_stp_map_entry_exists): Declare it.

2005-08-12  Frank Ch. Eigler  <fche@elastic.org>

	* arith.c: New file to contain arithmetic helper functions.
	* builtin_functions.h: Remove, unused.
	* runtime.h: Include it.

2005-08-10  Roland McGrath  <roland@redhat.com>

	* loc2c-runtime.h (store_bitfield): Fix argument use.